# -Aegis-Engine

./: .gitignore  AGENTS.md  CMakeLists.txt  readme.md
apps/sandbox/: CMakeLists.txt  main.cpp
assets/models/: m2-triangle.gltf
docs/adr/: 0001-m0-foundation.md  0002-m1-render-camera-transform.md  0003-m2-scene-gltf-asset-pipeline.md  0004-m3-material-system-pbr-ibl-lighting.md
docs/classes/: index.md  m0-classes.md  m1-classes.md  m2-classes.md
engine/: CMakeLists.txt
engine/include/engine/: engine.h
engine/include/engine/assets/: asset_manager.h  gltf_loader.h  mesh_data.h
engine/include/engine/core/: logger.h
engine/include/engine/input/: input_state.h
engine/include/engine/math/: mat4.h  quaternion.h  vec2.h  vec3.h  vec4.h
engine/include/engine/renderer/: basic_renderer.h
engine/include/engine/runtime/: camera.h  entity.h  scene.h  transform.h
engine/include/engine/time/: frame_timer.h
engine/src/: engine.cpp
engine/src/assets/: asset_manager.cpp  gltf_loader.cpp  mesh_data.cpp
engine/src/core/: logger.cpp
engine/src/input/: input_state.cpp
engine/src/renderer/: basic_renderer.cpp
engine/src/runtime/: camera.cpp  scene.cpp  transform.cpp
engine/src/time/: frame_timer.cpp
scripts/: install_external_deps.sh  publish_master.sh  remove_external_deps.sh  up.sh  validate_build.sh
